working on mobile issues

--- a/StatsExtractor/WebService/Frontend/NatStats/src/app.css
+++ b/StatsExtractor/WebService/Frontend/NatStats/src/app.css
@@ -6,4 +6,5 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --mobile-width: 900px;
 }
